# vmerger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  rustfmt.toml
src/: cli.rs  main.rs
src/core/: processor.rs
tests/: cli_intergration_tests.rs
